--- a/views/now-playing.hbs
+++ b/views/now-playing.hbs
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link rel='stylesheet' href='/stylesheets/now-playing.css' />
+    <title>{{title}}</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
 
@@ -25,12 +26,11 @@
 
 {{#if session}}
     <div><img src="{{session.user.photos.[0].value }}"></div>
-    <div>{{title}}</div>
 {{else}}
     <a href="/oauth" class="btn-large waves-effect waves-light" style="text-transform: none;">Twitterでログイン</a>
 {{/if}}
 
-
+<script src="/socket.io/socket.io.js"></script>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
 <script type="text/javascript" src="/javascripts/now-playing.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script></body>
