--- a/views/now-playing.hbs
+++ b/views/now-playing.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel='stylesheet' href='/stylesheets/now-playing.css' />
+    <link rel='stylesheet' href='/stylesheets/now-playing.css'/>
     <title>{{title}}</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
@@ -19,13 +19,14 @@
     <!--　</nav>-->
 
 
-
 </head>
 <body>
 <canvas id="c"></canvas>
 
 {{#if session}}
-    <div><img src="{{session.user.photos.[0].value }}"></div>
+    <div><img src="{{session.user.photos.[0].value }}">
+        <a href="/nowplaying/post" class="btn-large waves-effect waves-light" style="text-transform: none;">Let's tweet!</a>
+    </div>
 {{else}}
     <a href="/oauth" class="btn-large waves-effect waves-light" style="text-transform: none;">Twitterでログイン</a>
 {{/if}}
@@ -33,6 +34,7 @@
 <script src="/socket.io/socket.io.js"></script>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
 <script type="text/javascript" src="/javascripts/now-playing.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script></body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
+</body>
 
 </html>
